[package]
authors = ['Joystream']
edition = '2018'
name = 'joystream-proposals-v2-module'
version = '7.0.0'

[features]
default = ['std']
no_std = []
std = [
    'sr-staking-primitives/std',
    'staking/std',
    'codec/std',
    'rstd/std',
    'srml-support/std',
    'balances/std',
    'primitives/std',
    'runtime-primitives/std',
    'system/std',
    'timestamp/std',
    'serde',
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.sr-staking-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-staking-primitives'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'

[dev-dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '0e3001a1ad6fa3d1ba7da7342a8d0d3b3facb2f3'